force-app/main/default/objects/AV_BookMember__c/AV_BookMember__c.object-meta.xml
<CustomObject>
    <description>Objeto que contiene las carteras que están asociadas al cliente</description>
    <label>Cartera Cliente</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Cartera Cliente Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Carteras Cliente</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>