force-app/main/default/objects/AV_BookMember__c/fields/AV_Cartera__c.field-meta.xml
<CustomField>
    <fullName>AV_Cartera__c</fullName>
    <description>Cartera asociada</description>
    <label>Cartera</label>
    <referenceTo>AV_Book__c</referenceTo>
    <relationshipLabel>Carteras Cliente</relationshipLabel>
    <relationshipName>Carteras_Cliente</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>