force-app/main/default/objects/AV_BookMember__c/fields/AV_CarteraActiva__c.field-meta.xml
<CustomField>
    <fullName>AV_CarteraActiva__c</fullName>
    <description>Indicador de cartera activa</description>
    <formula>TEXT(AV_Cartera__r.AV_Activa__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cartera Activa</label>
    <type>Text</type>
</CustomField>