force-app/main/default/objects/AV_BookMember__c/fields/AV_CarteraPrincipal__c.field-meta.xml
<CustomField>
    <fullName>AV_CarteraPrincipal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicador de cartera principal</description>
    <label>Cartera Principal</label>
    <type>Checkbox</type>
</CustomField>