force-app/main/default/objects/AV_BookMember__c/fields/AV_Cliente__c.field-meta.xml
<CustomField>
    <fullName>AV_Cliente__c</fullName>
    <description>Cliente asociado a la cartera</description>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Carteras Cliente</relationshipLabel>
    <relationshipName>Carteras_Cliente</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>