force-app/main/default/objects/AV_BookMember__c/fields/AV_FechaAlta__c.field-meta.xml
<CustomField>
    <fullName>AV_FechaAlta__c</fullName>
    <description>Fecha de alta</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha Alta</label>
    <type>Date</type>
</CustomField>