force-app/main/default/objects/AV_BookMember__c/fields/CIBE_NegocioCartera__c.field-meta.xml
<CustomField>
    <fullName>CIBE_NegocioCartera__c</fullName>
    <description>negocio</description>
    <formula>TEXT(AV_Cartera__r.AV_TipoCartera__c)</formula>
    <label>Negocio</label>
    <type>Text</type>
</CustomField>