force-app/main/default/objects/AV_BookMember__c/recordTypes/AV_CarteraCliente.recordType-meta.xml
<RecordType>
    <fullName>AV_CarteraCliente</fullName>
    <active>true</active>
    <label>Cartera Cliente</label>
</RecordType>